feat: Add coin count display and fetch API for user coins.
- Add coin count display in main view
- Center coin display horizontally and vertically
- Add new SVG file for coins fill
- Add getCoin function to utils/user.js file to fetch data from remote API and remove about and prompts storage retrieval in onLoad function

--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -4,6 +4,15 @@
     <view class="logo-container" bindtransitionend="transitionEnd">
         <image class="logo  {{extraClasses}}" bindtap="handleTapLogo" mode="aspectFit" src="/assets/logo.png" aria-label="Logo" />
     </view>
+    <view>
+        当前硬币数量
+    </view>
+    <view class="coin">
+        <image src="/assets/PhCoinsFill.svg" style="height: 60rpx; width: 60rpx; padding: 12rpx;"></image>
+        <view>
+            {{ coin }}
+        </view>
+    </view>
     <t-cell-group theme="card" style="width: 100%;">
         <t-cell title="大字模式" bordered="{{false}}" style="font-size: 1.2rem;">
             <t-switch bindchange="handleLargeFontModeChange" value="{{largeFontMode}}" label="{{['小', '大']}}" slot="note" />
