--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -70,3 +70,11 @@ background: radial-gradient(circle, rgba(42,229,37,1) 0%, rgba(42,229,37,0.44443
     gap: 20rpx;
     margin-top: 32rpx;
 }
+
+.coin {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 300rpx;
+}
