--- a/pages/ask/ask.wxml
+++ b/pages/ask/ask.wxml
@@ -15,15 +15,16 @@
 </view>
 <view class="intro" hidden="{{!showIntro}}">
     <view>
-        欢迎来到「小博来帮你」小程序
+        欢迎来到「AI英语对话」小程序
     </view>
     <view>
-        1. 下方输入框中输入问题或任何想说的话，点击「发送」，AI 就会给你回答。
+        1. 在下方用英语输入问题，AI就会用英语回答你。
+    </view>
+
+    <view>
+        2. 如果你有任何意见，都可以<button open-type="contact" style="display: inline; border: 0; color: blue; padding: 0; margin: 0; font-size: inherit; line-height: inherit;">「联系我」</button>。
     </view>
     <view>
-        2. 体验文章摘要、润色等功能，请点击下方选项栏中间的<button plain bindtap="handleTapTools" style="display: inline; border: 0; padding: 0; margin: 0; font-size: inherit; line-height: inherit;">「工具箱」</button>。
-    </view>
-    <view>
-        3. 如果你有任何意见，都可以<button open-type="contact" style="display: inline; border: 0; color: blue; padding: 0; margin: 0; font-size: inherit; line-height: inherit;">「联系我」</button>。
+        3. 未来，我们会推出语音对话功能，敬请期待。
     </view>
 </view>
